<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd700"
    tools:context=".leiolel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="343dp"
            android:layout_height="244dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/layuion"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="The Lion and the Mouse"
            android:textSize="25sp"
            android:fontFamily="@font/candal"
            android:layout_gravity="center"
            android:textColor="#ff4500"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/leoion"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/laon"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/lasal"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/adea"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/sadu"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/mous"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/mane"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:text="@string/shous"/>


    </LinearLayout>

</ScrollView>