<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00bbff"
    tools:context=".goose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="343dp"
            android:layout_height="244dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/gusio"/>
        <TextView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="The Goose with the Golden Eggs"
            android:textSize="25sp"
            android:fontFamily="@font/candal"
            android:layout_gravity="center"
            android:textColor="#ffff00"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/once"
            android:textColor="#ffff"
            android:textSize="20sp" />
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:text="@string/onc"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:text="@string/oncee"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:layout_marginBottom="40dp"
            android:text="@string/onced"/>


    </LinearLayout>
</ScrollView>