<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#228bb2"
    tools:context=".shimper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="343dp"
            android:layout_height="244dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/shepards"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="Shepherd Boy"
            android:textSize="25sp"
            android:fontFamily="@font/candal"
            android:layout_gravity="center"
            android:textColor="#00ff00"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:text="@string/shi"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:text="@string/pald"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:text="@string/buqy"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:text="@string/biel"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:text="Moral: We should never lie, otherwise no one believes us."/>



    </LinearLayout>

</ScrollView>