<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008000"
    tools:context=".grahop">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <ImageView
           android:layout_width="343dp"
           android:layout_height="244dp"
           android:layout_gravity="center"
           android:layout_marginTop="30dp"
           android:background="@drawable/lagamham"/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:text="The Ant and the Grasshopper"
           android:textSize="25sp"
           android:fontFamily="@font/candal"
           android:layout_gravity="center"
           android:textColor="#adff2f"
           android:textAlignment="center"
           android:textStyle="bold"
           android:layout_marginTop="15dp"/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:fontFamily="sans-serif-black"
           android:textColor="#ffff"
           android:textSize="20sp"
           android:text="@string/antr"/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:fontFamily="sans-serif-black"
           android:textColor="#ffff"
           android:textSize="20sp"
           android:text="@string/ga"/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:fontFamily="sans-serif-black"
           android:textColor="#ffff"
           android:textSize="20sp"
           android:text="@string/ghr"/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:fontFamily="sans-serif-black"
           android:textColor="#ffff"
           android:textSize="20sp"
           android:text="@string/erda"/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:fontFamily="sans-serif-black"
           android:textColor="#ffff"
           android:textSize="20sp"
           android:text="When winter came, the Grasshopper found itself dying of hunger, while it saw the ants distributing, every day,
           corn and grain from the stores they had collected in summer.Then the Grasshopper knew..."/>
       <TextView
           android:layout_width="340dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="20dp"
           android:fontFamily="sans-serif-black"
           android:textColor="#ffff"
           android:textSize="20sp"
           android:layout_marginBottom="40dp"
           android:text="MORAL: WORK TODAY AND YOU CAN REAP THE BENEFITS TOMORROW!"/>


   </LinearLayout>

</ScrollView>