<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e68c"
    tools:context=".foxie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="343dp"
            android:layout_height="244dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/foxey"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="The Fox and the Grapes"
            android:textSize="25sp"
            android:fontFamily="@font/candal"
            android:layout_gravity="center"
            android:textColor="#b22222"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/fi"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/ox"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/gra"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:text="MORAL: IT'S EASY TO DESPISE WHAT YOU CANNOT HAVE."/>
    </LinearLayout>

</ScrollView>